将设置后的portal_layout保持至portlet_config中

--- a/app/views/irm/home/_portal.html.erb
+++ b/app/views/irm/home/_portal.html.erb
@@ -81,7 +81,8 @@
         $.ajax({
           type: 'POST',
           url: '/portlet_configs/save_portal_config',
-          data: {portal_config: portal_options},
+          data: {portal_config: portal_options,
+                 portal_layout_id: $("#portalContainerSelect").val()},
           dataType: 'json',
           success: function(data) { },
           error: function() {}
