--- a/app/views/irm/session_timeouts/index.html.erb
+++ b/app/views/irm/session_timeouts/index.html.erb
@@ -1,6 +1,6 @@
 <%= setting_title %>
 
-<%= form_for(@session_time,:url=>{:action=>"update", :id=> @session_time},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@session_timeout,:url=>{:action=>"update", :id=> @session_timeout},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -15,7 +15,7 @@
     </table>
   </div>
   <div class="pbBody">
-    <%= error_for @session_time %>
+    <%= error_for @session_timeout %>
     <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
       <h3><%= t(:label_common_info) %></h3>
     </div>
