--- a/app/views/icm/incident_statuses/_edit_form.html.erb
+++ b/app/views/icm/incident_statuses/_edit_form.html.erb
@@ -27,30 +27,54 @@
     <div class="pbSubsection">
       <table class="detailList" cellpadding="0" cellspacing="0" border="0">
         <tbody>
-            <tr>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_phase_code)%></label></td>
-              <td class="dataCol"><%=f.select :phase_code,nullable_options_for_select(available_incident_phase,@incident_status.phase_code),
-                                                    {},{:require=>true}%></td>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_incident_status_code)%></label></td>
-              <td class="dataCol"><%= @incident_status.incident_status_code%></td>
+           <tr>
+              <td class="labelCol"><label><%= (t :label_icm_incident_status_phase_code) %></label></td>
+              <td class="dataCol"><%= f.select :phase_code, nullable_options_for_select(available_incident_phase, @incident_status.phase_code),
+                                               {}, {:require=>true} %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_name)%></label></td>
-              <td class="dataCol"><%=f.text_field :name, :required=>true%></td>
-              <td class="labelCol"><%=t(:display_sequence)%></td>
-              <td class="dataCol"><%=f.text_field :display_sequence, :required=>true %></td>
+              <td class="labelCol"><label><%= (t :label_icm_incident_status_incident_status_code) %></label></td>
+              <td class="dataCol"><%= f.text_field :incident_status_code, :required=>true, :irm_uppercase=>true %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :default_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box :default_flag%></td>
-              <td class="labelCol"><label><%=(t :label_icm_incident_close_flag)%></label></td>
-              <td class="dataCol"><%=f.check_box :close_flag%></td>
+              <td class="labelCol"><label><%= (t :label_icm_incident_status_name) %></label></td>
+              <td class="dataCol"><%= f.text_field :name, :required=>true %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
             <tr>
-              <td class="labelCol"><label><%=(t :label_icm_incident_status_description)%></label></td>
-              <td class="dataCol"><%=f.text_area :description,:rows=>4%></td>
-              <td class="labelCol"><label><%=(t :status)%></label></td>
-              <td class="dataCol"><%=f.select :status_code,nullable_collection_options(available_status,:lookup_code,:wrap_meaning,@incident_status.status_code)%></td>
+              <td class="labelCol"><%= t(:display_sequence) %></td>
+              <td class="dataCol"><%= f.text_field :display_sequence, :required=>true %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= (t :default_flag) %></label></td>
+              <td class="dataCol"><%= f.check_box :default_flag %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= (t :label_icm_incident_close_flag) %></label></td>
+              <td class="dataCol"><%= f.check_box :close_flag %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= (t :label_icm_incident_permanent_close_flag) %></label></td>
+              <td class="dataCol"><%= f.check_box :permanent_close_flag %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label><%= (t :label_icm_incident_status_description) %></label></td>
+              <td class="dataCol"><%= f.text_area :description, :rows=>4 %></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
             </tr>
         </tbody>
       </table>
