--- a/app/views/irm/reports/edit_program.html.erb
+++ b/app/views/irm/reports/edit_program.html.erb
@@ -1,52 +1,63 @@
 <%= common_title(:action_meaning=>t(:edit)) %>
 
 <%= form_for(@report,:url=>{:action=>"update_program"},:builder => LabellingFormBuilder) do |f| %>
-    <%= page_block do %>
-        <%= page_block_header(t(:label_irm_report_edit)) do %>
+    <%= page_block("editPriority") do |pb|%>
+        <%= pb.page_block_header(:title=>t(:label_chm_change_priority_edit)) do %>
+          <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
-        <% end %>
-        <div class="pbBody">
-          <%= error_for @report%>
-          <%= first_sub_page_block(t(:label_common_info)) do  %>
-            <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-              <tbody>
-                <tr>
-                  <td class="labelCol"><label for="report_name"><%=t(:label_irm_report_name)%></label></td>
-                  <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"report_name"%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="report_code"><%=t(:label_irm_report_code)%></label></td>
-                  <td class="dataCol"><%=@report.code%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                 <tr>
-                  <td class="labelCol"><label for="program"><%=t(:label_irm_report_program)%></label></td>
-                  <td class="dataCol"><%=f.blank_select :program,available_report_programs ,{},{:id=>"program",:required=>true}%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="report_folder_id"><%=t(:label_irm_report_report_folder)%></label></td>
-                  <td class="dataCol"><%=f.blank_select :report_folder_id,available_report_folder,{} ,:required=>true,:id=>"report_folder_id"%></td>
-                  <td class="labelCol empty">&nbsp;</td>
-                  <td class="dataCol empty">&nbsp;</td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
-                </tr>
+          </td>
+          <td class="pbHelp">
+          </td>
 
-              </tbody>
-            </table>
+        <% end %>
+       <%= pb.page_block_body do %>
+            <%= error_for @report%>
+            <%= sub_page_block("baseInfo") do |spb|%>
+                <%= spb.sub_page_block_header(:title=>t(:label_common_info),:first=>true)%>
+                <%= spb.sub_page_block_body do %>
+                    <table class="detailList" cellpadding="0" cellspacing="0" border="0">
+                      <tbody>
+                        <tr>
+                          <td class="labelCol"><label for="report_name"><%=t(:label_irm_report_name)%></label></td>
+                          <td class="dataCol"><%=f.text_field :name, :required=>true ,:id=>"report_name"%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="report_code"><%=t(:label_irm_report_code)%></label></td>
+                          <td class="dataCol"><%=@report.code%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                         <tr>
+                          <td class="labelCol"><label for="program"><%=t(:label_irm_report_program)%></label></td>
+                          <td class="dataCol"><%=f.blank_select :program,available_report_programs ,{},{:id=>"program",:required=>true}%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="report_folder_id"><%=t(:label_irm_report_report_folder)%></label></td>
+                          <td class="dataCol"><%=f.blank_select :report_folder_id,available_report_folder,{} ,:required=>true,:id=>"report_folder_id"%></td>
+                          <td class="labelCol empty">&nbsp;</td>
+                          <td class="dataCol empty">&nbsp;</td>
+                        </tr>
+                        <tr>
+                          <td class="labelCol"><label for="report_description"><%=t(:label_irm_report_description)%></label></td>
+                          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description, :cols=>60,:rows=>5,:id=>"report_description"%></td>
+                        </tr>
+
+                      </tbody>
+                    </table>
+                <% end %>
           <% end %>
         </div>
-        <%= page_block_footer do %>
+        <%= pb.page_block_footer do %>
+          <td id="topButtonRow" class="pbButton">
             <div class="button"><%= link_submit t(:save)%></div>
             <div class="button"><%= link_back t(:cancel)%></div>
+          </td>
         <% end %>
+    <% end %>
     <% end %>
 <% end %>
