--- a/app/views/irm/roles/index.html.erb
+++ b/app/views/irm/roles/index.html.erb
@@ -1,24 +1,124 @@
 <%= setting_title %>
-
+<% require_javascript([:treeview]) %>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
         <table cellpadding="0" cellspacing="0" border="0">
           <tbody>
             <tr>
+              <% if params[:mode] == 'tree' %>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_role_structure) %></h2></td>
+              <% else %>
               <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_role_list) %></h2></td>
+              <% end %>
               <td id="topButtonRow" class="pbButton">
                 <div class="button"><%= link_to t(:new), {:controller => "irm/roles", :action => "new"}%></div>
               </td>
               <td class="pbHelp">
                 <div id="rolesSearchBox"></div>
+                <div>
+                  <%= form_tag({:controller => "irm/roles"}, {:method => 'get'}) do %>
+                      <span class="viewSelect">
+                        <%= select_tag_alias(:mode,available_mode_views, params[:mode], {:onchange => 'javascript: this.form.submit();'}) %>
+                      </span>
+                  <% end %>
+                </div>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
       <div class="pbBody">
+             <% if(params[:mode] == 'tree') %>
+             <style type="text/css">
+               .treeview, .treeview ul {
+                    padding: 0;
+                    margin: 2px 10px;
+                    list-style: none;
+                }
 
+                .treeview ul {
+                    margin-top: 4px;
+                }
+
+                .treeview .hitarea {
+                    background: url(images/treeview-default.gif) -64px -25px no-repeat;
+                    height: 16px;
+                    width: 16px;
+                    margin-left: -16px;
+                    float: left;
+                    cursor: pointer;
+                }
+                /* fix for IE6 */
+                * html .hitarea {
+                    display: inline;
+                    float:none;
+                }
+
+                .treeview li {
+                    margin: 0;
+                    padding: 3px 0pt 3px 16px;
+                }
+
+                .treeview a.selected {
+                    background-color: #eee;
+                }
+
+                #treecontrol { margin: 1em 0; display: none; }
+
+                .treeview .hover {cursor: pointer; }
+
+                .treeview li { background: url(images/treeview-default-line.gif) 0 0 no-repeat; }
+                .treeview li.collapsable, .treeview li.expandable { background-position: 0 -176px; }
+
+                .treeview .expandable-hitarea { background-position: -80px -3px; }
+
+                .treeview li.last { background-position: 0 -1766px }
+                .treeview li.lastCollapsable, .treeview li.lastExpandable { background-image: url(images/treeview-default.gif); }
+                .treeview li.lastCollapsable { background-position: 0 -111px }
+                .treeview li.lastExpandable { background-position: -32px -67px }
+
+                .treeview div.lastCollapsable-hitarea, .treeview div.lastExpandable-hitarea { background-position: 0; }
+
+                .treeview-red li { background-image: url(/images/treeview-red-line.gif); }
+                .treeview-red .hitarea, .treeview-red li.lastCollapsable, .treeview-red li.lastExpandable { background-image: url(/images/treeview-red.gif); }
+
+                 /* style of roles*/
+                 .role-name {font-weight: bold !important;}
+                 .role-actions a {margin-left: 4px; color: #666;}
+                 .role-actions .add-child a {font-weight: bold;color: #666;}
+             </style>
+             <ul id="red" class="treeview-red">
+               <script type="text/javascript">
+                 function buildNode(id, level,name,parent_id, new_action, edit_action, show_action) {
+                        if(id) {
+                           var node = '<li><span class="role-name">'+name+'</span>&nbsp;&nbsp;<span class="role-actions">'+edit_action+'</span> | <span class="role-actions">'+show_action+'</span>';
+                           node += '<ul id="'+id+'"><li><span class="role-actions add-child">'+new_action+'</span></li></ul>';
+                           node += '</li>'
+                           if(level && level == 1) {
+                             $("#red").append(node);
+                           }else{
+                             $("#"+parent_id).append(node);
+                           }
+                        }
+                    }
+                   var new_action,edit_action, show_action;
+                   <% @level_roles.each do |role| %>
+                   new_action = '<%= link_to(t(:new), {:controller => "irm/roles", :action => "new", :parent_id => role.id },{:onclick => "event.stopPropagation()||(event.cancelBubble = true);"})%>',
+                   edit_action = '<%= link_to(t(:edit),{:action=>"edit",:id=>role.id}, {:onclick => "event.stopPropagation()||(event.cancelBubble = true);"}) %>',
+                   show_action = '<%= link_to(t(:show),{:action=>"show",:id=>role.id}, {:onclick => "event.stopPropagation()||(event.cancelBubble = true);"}) %>';
+                   buildNode('<%= role.id %>', '<%= role.level %>','<%= role[:name] %>','<%= role[:report_to_role_id] %>', new_action, edit_action, show_action);
+                   <% end %>
+                 $("#red").treeview({
+                    animated: "fast",
+                    collapsed: true,
+                    unique: false,
+                    persist: "cookie"
+                 });
+               </script>
+
+             </ul>
+             <% else %>
              <!--  irm datatable      -->
               <div class="irm-datatable">
                 <div>
@@ -78,12 +178,13 @@
                             </div>
                           </td>
                         </tr>
-                      <% end -%>
+                      <% end %>
                       </tbody>
                     </table>
                 </div>
               </div>
              <!--  end irm datatable      -->
+             <% end %>
       </div>
     </div>
 </div>
