为业务对像添加数据权限控制标志

--- a/app/views/irm/business_objects/_edit_form.html.erb
+++ b/app/views/irm/business_objects/_edit_form.html.erb
@@ -58,6 +58,7 @@
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
+
            </tbody>
       </table>
     </div>
@@ -108,6 +109,12 @@
             <tr>
               <td class="labelCol"><label for="business_object_report_flag"><%=t(:label_irm_business_object_report_flag)%></label></td>
               <td class="dataCol"><%=f.check_box(:report_flag,:id=>"business_object_report_flag")%></td>
+              <td class="labelCol empty">&nbsp;</td>
+              <td class="dataCol empty">&nbsp;</td>
+            </tr>
+            <tr>
+              <td class="labelCol"><label for="business_object_data_access_flag"><%=t(:label_irm_business_object_data_access_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box(:data_access_flag,:id=>"business_object_data_access_flag")%></td>
               <td class="labelCol empty">&nbsp;</td>
               <td class="dataCol empty">&nbsp;</td>
             </tr>
