--- a/app/views/irm/business_objects/_new_form.html.erb
+++ b/app/views/irm/business_objects/_new_form.html.erb
@@ -43,8 +43,8 @@
             <tr>
               <td class="labelCol"><label for="business_object_standard_flag"><%=t(:label_irm_business_object_standard_flag)%></label></td>
               <td class="dataCol"><%=f.check_box(:standard_flag,:id=>"business_object__standard_flag")%></td>
-              <td class="labelCol empty">&nbsp;</td>
-              <td class="dataCol empty">&nbsp;</td>
+              <td class="labelCol"><label for="business_object_data_access_flag"><%=t(:label_irm_business_object_data_access_flag)%></label></td>
+              <td class="dataCol"><%=f.check_box(:data_access_flag,:id=>"business_object_data_access_flag")%></td>
             </tr>
            </tbody>
       </table>
