--- a/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
+++ b/app/views/icm/incident_requests/_sidebar_relation_list.html.erb
@@ -1,6 +1,6 @@
 <% require_javascript(:extjs) %>
 <% require_css(:extjs) %>
-<%= form_tag({:controller => "icm/incident_requests", :action => "add_relation", :source_id => incident_request.id}, :remote => true) do %>
+<%= form_tag({:controller => "icm/incident_requests", :action => "add_relation", :source_id => incident_request.id}, :remote => true) do |f| %>
 <div class="sidebarModule">
     <div class="sidebarModuleHeader"><h2>
       <%= t :label_icm_incident_request_relation %>
@@ -14,9 +14,19 @@
                 <div id="relation_select" style="float:left;">
                   <%= lov_field_tag "icm_relation", Icm::IncidentRequest, :style => "width:110px;" %>
                 </div>
-                  <div class="float-right">
+
+              </td>
+            </tr>
+
+            <!-- 关联的类别 -->
+            <tr>
+              <td>
+                <div id="relation_type" style="float: left;">
+                  <%= t(:label_icm_incident_request_relation_type) %> <%= select_tag_alias(:relation_type,Irm::LookupValue.get_lookup_value("ICM_INCIDENT_REQUEST_REL_TYPE").collect{|p| [p[:meaning], p.lookup_code]}, nil) %>
+                </div>
+                <div class="float-right">
                     <div class="button"><%= submit_tag(t(:add))%></div>
-                  </div>
+                </div>
               </td>
             </tr>
           </tbody>
