--- a/app/views/irm/organizations/index.html.erb
+++ b/app/views/irm/organizations/index.html.erb
@@ -1,22 +1,69 @@
 <%= app_title %>
+<% require_javascript([:treeview]) %>
+<% require_css([:treeview]) %>
 <div class="listRelatedObject setupBlock">
     <div class="page-block">
       <div class="pbHeader">
         <table cellpadding="0" cellspacing="0" border="0">
           <tbody>
             <tr>
+              <% if params[:mode] == 'tree' %>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_organization_structure) %></h2></td>
+              <% else %>
               <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_organization_list) %></h2></td>
               <td id="topButtonRow" class="pbButton">
                 <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
               </td>
+              <% end %>
               <td class="pbHelp">
                 <div id="permissionsSearchBox"></div>
+                <div>
+                  <%= form_tag({:controller => "irm/organizations"}, {:method => 'get'}) do %>
+                      <span class="viewSelect">
+                        <%= select_tag_alias(:mode,available_mode_views, params[:mode], {:onchange => 'javascript: $.cookie("organization_view", this.value);this.form.submit();'}) %>
+                      </span>
+                  <% end %>
+                </div>
               </td>
             </tr>
           </tbody>
         </table>
       </div>
       <div class="pbBody">
+              <% if(params[:mode] == 'tree') %>
+                <div id="sidetreecontrol"> <a href="?#"><%= t(:collapse_all) %></a> | <a href="?#"><%= t(:expand_all) %></a> </div>
+                <ul id="red" class="treeview-red">
+                   <script type="text/javascript">
+                     function buildNode(id, level,name,parent_id, new_action, edit_action, show_action) {
+                            if(id) {
+                               var node = '<li><span class="name">'+name+'</span>&nbsp;&nbsp;<span class="actions">'+edit_action+'</span> | <span class="actions">'+show_action+'</span>';
+                               node += '<ul id="'+id+'"><li><span class="actions add-child">'+new_action+'</span></li></ul>';
+                               node += '</li>'
+                               if(level && level == 1) {
+                                 $("#red").append(node);
+                               }else{
+                                 $("#"+parent_id).append(node);
+                               }
+                            }
+                        }
+                       var new_action,edit_action, show_action;
+                       <% @leveled_organizations.each do |organization| %>
+                       new_action = '<%= link_to(t(:new), {:controller => "irm/organizations", :action => "new", :parent_id => organization.id },{:onclick => "event.stopPropagation()||(event.cancelBubble = true);"})%>',
+                       edit_action = '<%= link_to(t(:edit),{:action=>"edit",:id=>organization.id}, {:onclick => "event.stopPropagation()||(event.cancelBubble = true);"}) %>',
+                       show_action = '<%= link_to(t(:show),{:action=>"show",:id=>organization.id}, {:onclick => "event.stopPropagation()||(event.cancelBubble = true);"}) %>';
+                       buildNode('<%= organization.id %>', '<%= organization.level %>','<%= organization[:name] %>','<%= organization[:parent_org_id] %>', new_action, edit_action, show_action);
+                       <% end %>
+                     $("#red").treeview({
+                        animated: "fast",
+                        control:"#sidetreecontrol",
+                        collapsed: true,
+                        unique: false,
+                        persist: "cookie"
+                     });
+                   </script>
+
+                 </ul>
+              <% else %>
               <!--  irm datatable      -->
               <div class="irm-datatable">
                 <div>
@@ -73,6 +120,7 @@
                 </div>
               </div>
              <!--  end irm datatable      -->
+            <% end %>
         </div>
     </div>
 </div>
