--- a/app/views/irm/mail_templates/_edit_form.html.erb
+++ b/app/views/irm/mail_templates/_edit_form.html.erb
@@ -20,10 +20,15 @@
   div.controlItems th {
       font-weight: bold;
   }
+  #editor {
+     position: absolute;
+     width: 618px;
+     height: 200px;
+  }
 </style>
 <%= setting_title %>
 
-<%= form_for(@mail_template,:url=>{:action=>"update"},:builder => LabellingFormBuilder) do |f| %>
+<%= form_for(@mail_template,:url=>{:action=>"update"},:html => {:id => "mail_template"},:builder => LabellingFormBuilder) do |f| %>
 <div id="ep" class="edit-block page-block">
   <div class="pbHeader">
     <table cellpadding="0" cellspacing="0" border="0">
@@ -103,8 +108,7 @@
            <span class="requiredMark">*</span><span class="requiredText"> = <%=t(:label_is_required)%></span></span></span>
            <h3><%=t(:label_irm_mail_template_content)%></h3>
     </div>
-    <div class="pbSubsection" id="showTab" current="<%=I18n.locale %>">
-    </div>
+    <div class="pbSubsection" id="showTab" current="<%=I18n.locale %>"></div>
     <div class="pbSubsection" id="templateBody" style="display:none" current="<%=I18n.locale %>">
       <ul>
         <% available_languages.each do |language| %>
@@ -113,6 +117,7 @@
       </ul>
       <div>
       <%= f.fields_for :mail_templates_tls,:normal=>true do |tl_f|%>
+        <%= tl_f.hidden_field :mail_body, {:id => 'mail_body_value'} %>
         <div id="template<%= tl_f.object.language%>">
           <div class="page-block">
           <table class="detailList" cellpadding="0" cellspacing="0" border="0">
@@ -132,7 +137,13 @@
 
                 <tr>
                   <td class="labelCol"><label><%=t(:label_irm_mail_template_mail_body)%></label></td>
-                  <td class="data2Col" colspan="3"><%=tl_f.text_area :mail_body ,:cols => 85, :rows => 12,:required=>true%></td>
+                  <td class="data2Col" colspan="3" style="width: 618px; height: 201px;">
+                    <div class="requiredInput">
+                      <div class="requiredBlock"></div>
+                      <div id="editor"></div>
+                    </div>
+                    <!--<%=tl_f.text_area :mail_body ,:cols => 85, :rows => 12,:required=>true%> -->
+                  </td>
                 </tr>
             </tbody>
           </table>
@@ -160,7 +171,19 @@
 
 <% require_javascript(:extjs) %>
 <% require_css(:extjs) %>
+<% require_javascript([:ace]) %>
 <script type="text/javascript">
+  window.onload = function() {
+    var editor = ace.edit("editor");
+    var htmlMode = require("ace/mode/html").Mode;
+    editor.getSession().setMode(new htmlMode());
+    editor.getSession().setValue($("#mail_body_value").val());
+    //提交表单之前将编辑器中的内容保存到隐藏表单中
+    $("#mail_template").submit(function(){
+        $(this).find("#mail_body_value").val(editor.getSession().getValue());
+        this.submit();
+    });
+  };
   Ext.onReady(function(){
       var languages = [];
       var currentLanguage = Ext.get("templateBody").dom.getAttribute("current");
@@ -171,7 +194,7 @@
       for(var i=0;i<languages.length;i++)
       {
           if(languages[i].ref == currentLanguage)
-            currentIndex = i;
+            currentIndex = 0;
       }
 
       var languageTabs = Ext.createWidget('tabpanel', {
