--- a/app/views/irm/mail_templates/_new_form.html.erb
+++ b/app/views/irm/mail_templates/_new_form.html.erb
@@ -144,7 +144,7 @@
     var editor = ace.edit("editor");
     var htmlMode = require("ace/mode/html").Mode;
     editor.getSession().setMode(new htmlMode());
-    //editor.getSession().setValue("youjian");
+    editor.getSession().setValue($("#mail_body_value").val());
     //提交表单之前将编辑器中的内容保存到隐藏表单中
     $("#mail_template").submit(function(){
         $(this).find("#mail_body_value").val(editor.getSession().getValue());
