添加数据共享规则的 临时权限和路由以及新建页面

--- a/app/views/irm/data_accesses/index.html.erb
+++ b/app/views/irm/data_accesses/index.html.erb
@@ -57,5 +57,38 @@
       </div>
     </div>
 </div>
+<!--business object data share rule begin-->
+<% @data_accesses.each do |data_access| %>
+  <div class="listRelatedObject setupBlock">
+    <div class="page-block">
+      <div class="pbHeader">
+        <table cellpadding="0" cellspacing="0" border="0">
+          <tbody>
+            <tr>
+              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_data_share_rule_list) %></h2></td>
+              <td id="topButtonRow" class="pbButton">
+                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
+              </td>
+              <td class="pbHelp">
+                <div id="data_share_rulesSearchBox"></div>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+      <div class="pbBody">
+        <div id="data_share_rules_<%=data_access[:id]%>" class="datatable" style="width:100%">
+          <div id="id" style="display:none">
+            <%= link_to(t(:edit),{:action=>"edit",:id=>"{id}"}) %>|<%= link_to(t(:show),{:action=>"show",:id=>"{id}"}) %>
+          </div>
+        </div>
+        <%= datatable("data_share_rules",url_for(:action=>"get_data",:format=>"json"),
+                      [{:key=>"id",:label=>t(:operation),:formatter=>"Y.irm.template",:width=>"70px"},
+                                              ],{:paginator_box=>"data_share_rulesPaginatorBox",:search_box=>"data_share_rulesSearchBox"})%>
+        <div id="data_share_rulesPaginatorBox"></div>
+      </div>
+    </div>
+</div>
 
+<% end -%>
 
