--- a/app/views/irm/mail_templates/_edit_form.html.erb
+++ b/app/views/irm/mail_templates/_edit_form.html.erb
@@ -1,3 +1,4 @@
+<% require_javascript([:ace]) %>
 <style type="text/css">
   .controls {
     display: inline-block;
@@ -20,7 +21,7 @@
   div.controlItems th {
       font-weight: bold;
   }
-  #editor {
+  .editor {
      position: absolute;
      width: 618px;
      height: 200px;
@@ -117,7 +118,7 @@
       </ul>
       <div>
       <%= f.fields_for :mail_templates_tls,:normal=>true do |tl_f|%>
-        <%= tl_f.hidden_field :mail_body, {:id => 'mail_body_value'} %>
+        <%= tl_f.hidden_field :mail_body, {:id => 'mail_body_value'+tl_f.object.language} %>
         <div id="template<%= tl_f.object.language%>">
           <div class="page-block">
           <table class="detailList" cellpadding="0" cellspacing="0" border="0">
@@ -140,9 +141,8 @@
                   <td class="data2Col" colspan="3" style="width: 618px; height: 201px;">
                     <div class="requiredInput">
                       <div class="requiredBlock"></div>
-                      <div id="editor"></div>
+                      <div id="editor<%= tl_f.object.language%>" class="editor"></div>
                     </div>
-                    <!--<%=tl_f.text_area :mail_body ,:cols => 85, :rows => 12,:required=>true%> -->
                   </td>
                 </tr>
             </tbody>
@@ -168,33 +168,26 @@
   </div>
 </div>
 <% end %>
-
 <% require_javascript(:extjs) %>
 <% require_css(:extjs) %>
-<% require_javascript([:ace]) %>
 <script type="text/javascript">
-  window.onload = function() {
-    var editor = ace.edit("editor");
-    var htmlMode = require("ace/mode/html").Mode;
-    editor.getSession().setMode(new htmlMode());
-    editor.getSession().setValue($("#mail_body_value").val());
-    //提交表单之前将编辑器中的内容保存到隐藏表单中
-    $("#mail_template").submit(function(){
-        $(this).find("#mail_body_value").val(editor.getSession().getValue());
-        this.submit();
-    });
-  };
   Ext.onReady(function(){
       var languages = [];
       var currentLanguage = Ext.get("templateBody").dom.getAttribute("current");
       var currentIndex = 0;
+      var currentEditor, htmlMode;
       Ext.each(Ext.query("#templateBody ul li a.language"),function(e){
-         languages.push({contentEl:e.getAttribute("ref"),title:e.innerHTML,ref:e.id})
+         languages.push({contentEl:e.getAttribute("ref"),title:e.innerHTML,ref:e.id});
       });
-      for(var i=0;i<languages.length;i++)
-      {
-          if(languages[i].ref == currentLanguage)
-            currentIndex = 0;
+      for(var i=0;i<languages.length;i++) {
+          var editor= ace.edit("editor"+languages[i].ref);
+          htmlMode = require("ace/mode/html").Mode;
+          editor.getSession().setMode(new htmlMode());
+          editor.getSession().setValue($("#mail_body_value"+languages[i].ref).val());
+          if(languages[i].ref == currentLanguage) {
+             currentIndex = i;
+             currentEditor = editor;
+          }
       }
 
       var languageTabs = Ext.createWidget('tabpanel', {
@@ -207,6 +200,13 @@
           items: [languages]
       });
 
+      //提交表单之前将编辑器中的内容保存到隐藏表单中
+      $("#mail_template").submit(function(){
+        for(var i=0;i<languages.length;i++) {
+            $(this).find("#mail_body_value"+languages[i].ref).val(currentEditor.getSession().getValue());
+        }
+        this.submit();
+      });
       $("#parameter_bo").cascade("#parameter_field_name");
       $("#parameter_field_name").change(function(e){
           var target = $(e.target)
