为系统添加session 过期检查

--- a/app/views/layouts/application_right.html.erb
+++ b/app/views/layouts/application_right.html.erb
@@ -15,6 +15,7 @@
   <% if content_for?(:page_script) %>
     <%=javascript_tag(yield :page_script)%>
   <% end %>
+  <%= render :partial => "irm/common/app_session_check" %>
   <%= render :partial => "irm/common/address_bar_logo" %>
 </head>
 <body id ="body" class="lay-right yui3-skin-sam yui-skin-sam">
