--- a/app/views/layouts/setting.html.erb
+++ b/app/views/layouts/setting.html.erb
@@ -11,6 +11,7 @@
         $("#settingMenu").menubutton();
     });
   </script>
+  <%= render :partial => "irm/common/app_session_check" %>
   <%= render :partial => "irm/common/address_bar_logo" %>
 </head>
 <body id="body" class="setupTab setup yui3-skin-sam yui-skin-sam">
