--- a/app/views/layouts/application_full.html.erb
+++ b/app/views/layouts/application_full.html.erb
@@ -17,6 +17,7 @@
   <% if content_for?(:page_script) %>
     <%=javascript_tag(yield :page_script)%>
   <% end %>
+  <%= render :partial => "irm/common/app_session_check" %>
   <%= render :partial => "irm/common/address_bar_logo" %>
 </head>
 <body id ="body" class="lay-full yui3-skin-sam yui-skin-sam">
